// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Property rows in tables describing object schemas are hoisted to the top of the table if marked as required by the spec 1`] = `
"<div class="openapi">

# ObjectPropertyOrder

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "id": "c3073b9d-edd0-49f2-a28d-b7ded8ff9a8b",
    "luminosityClass": "string",
    "name": "string",
    "catalogueDesignationCCDM": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 id<span class="openapi__required">*</span> 
|
 **Type:** string&lt;uuid&gt;

Internal ID for this star
 
||

||
 luminosityClass<span class="openapi__required">*</span> 
|
 **Type:** string

Morgan-Keenan luminosity class for this star
 
||

||
 name<span class="openapi__required">*</span> 
|
 **Type:** string

Name of this star
 
||

||
 catalogueDesignationCCDM 
|
 **Type:** string

CCDM catalogue designation for this star
 
|||#

</div>

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`Property rows in tables describing object schemas are ordered lexicographically by default 1`] = `
"<div class="openapi">

# ObjectPropertyOrder

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "id": "c3073b9d-edd0-49f2-a28d-b7ded8ff9a8b",
    "luminosityClass": "string",
    "name": "string",
    "catalogueDesignationCCDM": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 catalogueDesignationCCDM 
|
 **Type:** string

CCDM catalogue designation for this star
 
||

||
 id 
|
 **Type:** string&lt;uuid&gt;

Internal ID for this star
 
||

||
 luminosityClass 
|
 **Type:** string

Morgan-Keenan luminosity class for this star
 
||

||
 name 
|
 **Type:** string

Name of this star
 
|||#

</div>

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;
